clean up notebook, answer final Qs, cite sources

--- a/Project/markc_SageMaker_Project.ipynb
+++ b/Project/markc_SageMaker_Project.ipynb
@@ -568,7 +568,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 20-minute runtime mark\n",
+    "###### note to self: 20-minute runtime mark\n",
     "\n",
     "## Transform the data\n",
     "\n",
@@ -618,6 +618,13 @@
     "        word_dict[word] = idx + 2                              # 'infrequent' labels\n",
     "        \n",
     "    return word_dict"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Citation, to sort a dictionary by value, above: [Stack Overflow](https://stackoverflow.com/questions/613183/how-do-i-sort-a-dictionary-by-value)*"
    ]
   },
   {
@@ -761,7 +768,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As a quick check to make sure that things are working as intended, check to see what one of the reviews in the training set looks like after having been processeed. Does this look reasonable? What is the length of a review in the training set?"
+    "As a quick check to make sure that things are working as intended, check to see what one of the reviews in the training set looks like after having been processeed.\n",
+    "Does this look reasonable? \n",
+    "What is the length of a review in the training set?\n",
+    "\n",
+    "**length=500. Looks reasonable (below)**"
    ]
   },
   {
@@ -861,7 +872,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "**Answer:** This may allow a **data leakage** problem to arise:\n",
+    "\n",
+    "> Data leakage can cause you to create overly optimistic if not completely invalid predictive models.\n",
+    "\n",
+    "> Data leakage is when information from outside the training dataset is used to create the model. This additional information can allow the model to learn or know something that it otherwise would not know and in turn invalidate the estimated performance of the mode being constructed.\n",
+    "\n",
+    "> > if any other feature whose value would not actually be available in practice at the time you’d want to use the model to make a prediction, is a feature that can introduce leakage to your model\n",
+    "\n",
+    "Citation: [machinelearningmastery.com](https://machinelearningmastery.com/data-leakage-machine-learning/)"
    ]
   },
   {
@@ -995,7 +1014,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### (TODO) Writing the training method\n",
+    "### (TODO--DONE) Writing the training method\n",
     "\n",
     "Next we need to write the training code itself. This should be very similar to training methods that you have written before to train PyTorch models. We will leave any difficult aspects such as model saving / loading and parameter loading until a little later."
    ]
@@ -1024,7 +1043,7 @@
     "            # forward propagation\n",
     "            outputs = model(batch_X)\n",
     "            \n",
-    "            # loss function\n",
+    "            # loss function - calculation of error between true and predicted outputs\n",
     "            loss = loss_fn(outputs, batch_y)\n",
     "            \n",
     "            # back propagation\n",
@@ -1078,6 +1097,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**observation:** With each epoch, the error is reduced. While one can justify running more epochs,\n",
+    "I stop at 5 in the interest of time."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "In order to construct a PyTorch model using SageMaker we must provide SageMaker with a training script. We may optionally include a directory which will be copied to the container and from which our training code will be run. When the training container is executed it will check the uploaded directory (if there is one) for a `requirements.txt` file and install any required Python libraries, after which the training script will be run."
    ]
   },
@@ -1085,13 +1112,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### (TODO) Training the model\n",
+    "### (TODO--DONE) Training the model\n",
     "\n",
     "When a PyTorch model is constructed in SageMaker, an entry point must be specified. This is the Python file which will be executed when the model is trained. Inside of the `train` directory is a file called `train.py` which has been provided and which contains most of the necessary code to train our model. The only thing that is missing is the implementation of the `train()` method which you wrote earlier in this notebook.\n",
     "\n",
-    "**TODO**: Copy the `train()` method written above and paste it into the `train/train.py` file where required.\n",
+    "**TODO--DONE**: Copy the `train()` method written above and paste it into the `train/train.py` file where required.\n",
     "\n",
-    "The way that SageMaker passes hyperparameters to the training script is by way of arguments. These arguments can then be parsed and used in the training script. To see how this is done take a look at the provided `train/train.py` file."
+    "The way that SageMaker passes hyperparameters to the training script is by way of arguments. These arguments can then be parsed and used in the training script. To see how this is done take a look at the provided `train/train.py` file.\n",
+    "\n",
+    "## **Please see lines 80-95.**"
    ]
   },
   {
@@ -1109,13 +1138,22 @@
     "                    py_version='py3',\n",
     "                    train_instance_count=1,\n",
     "                    train_instance_type='ml.m4.xlarge',\n",
-    "#                     train_instance_type='ml.p2.xlarge',  # this value associated with UnexpectedStatusException below\n",
     "                    hyperparameters={\n",
     "                        'epochs': 3,\n",
-    "#                         'epochs': 10,  # this value associated with UnexpectedStatusException below\n",
     "                        'hidden_dim': 30,\n",
-    "#                         'hidden_dim': 200,  <-- OVERFITS\n",
     "                    })"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "note: These parameter \n",
+    "values are associated with an `UnexpectedStatusException` below when used.\n",
+    "\n",
+    "    # train_instance_type='ml.p2.xlarge',  # this \n",
+    "    # 'epochs': 10,  # this value associated with UnexpectedStatusException below\n",
+    "    # 'hidden_dim': 200,  <-- possible overfitting"
    ]
   },
   {
@@ -1325,7 +1363,7 @@
     "\n",
     "Since we don't need to change anything in the code that was uploaded during training, we can simply deploy the current model as-is.\n",
     "\n",
-    "**TODO:** Deploy the trained model."
+    "**TODO--DONE:** Deploy the trained model."
    ]
   },
   {
@@ -1350,11 +1388,10 @@
     }
    ],
    "source": [
-    "# TODO: Deploy the trained model\n",
+    "# TODO--DONE: Deploy the trained model\n",
     "predictor = estimator.deploy(\n",
     "    initial_instance_count = 1, \n",
     "    instance_type = 'ml.m4.xlarge'\n",
-    "#     instance_type = 'ml.p2.xlarge'\n",
     ")"
    ]
   },
@@ -1468,14 +1505,16 @@
     "\n",
     "I think XGBoost is faster and simpler than a LSTM Recurring Neural Network. However, the LSTM model will have more sophistication that should, at least theoretically, deliver a higher degree of model performance (in this case, accuracy).\n",
     "\n",
-    "Why the LSTM shows 50% accuracy is a mystery (and a let down) to me. \n"
+    "Why the LSTM shows 50% accuracy is not completely clear. Though I did hope for higher, I did choose to move on to focus on MLND content. I did attempt a reduction in `hidden_dim` based on a [Udacity mentor suggestion](https://knowledge.udacity.com/questions/546544) to target overfitting.\n",
+    "\n",
+    "<img alt=\"suggestion from overfitting\" src=\"./img/screenshot_hidden-dim=30.png\" width=\"450\" height=\"450\" />"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### (TODO) More testing\n",
+    "### (TODO--DONE) More testing\n",
     "\n",
     "We now have a trained model which has been deployed and which we can send processed reviews to and which returns the predicted sentiment. However, ultimately we would like to be able to send our model an unprocessed review. That is, we would like to send the review itself as a string. For example, suppose we wish to send the following review to our model."
    ]
@@ -1501,7 +1540,7 @@
     " \n",
     "In order process the review we will need to repeat these two steps.\n",
     "\n",
-    "**TODO**: Using the `review_to_words` and `convert_and_pad` methods from section one, convert `test_review` into a numpy array `test_data` suitable to send to our model. Remember that our model expects input of the form `review_length, review[500]`."
+    "**TODO--DONE**: Using the `review_to_words` and `convert_and_pad` methods from section one, convert `test_review` into a numpy array `test_data` suitable to send to our model. Remember that our model expects input of the form `review_length, review[500]`."
    ]
   },
   {
@@ -1535,24 +1574,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "# TODO: Convert test_review into a form usable by the model and save the results in test_data\n",
-    "# no good # arr_words = review_to_words(test_review)\n",
-    "# no good # test_data, test_data_len = convert_and_pad(model.word_dict, arr_words)\n",
-    "# test_data, data_length = convert_and_pad(word_dict, review_to_words(test_review))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# TODO--DONE: Convert test_review into a form usable by the model and save the results in test_data\n",
     "test_data, data_length = convert_and_pad(word_dict, review_to_words(test_review))"
    ]
   },
@@ -1679,7 +1705,7 @@
     "\n",
     "For the simple website that we are constructing during this project, the `input_fn` and `output_fn` methods are relatively straightforward. We only require being able to accept a string as input and we expect to return a single value as output. You might imagine though that in a more complex application the input or output may be image data or some other binary data which would require some effort to serialize.\n",
     "\n",
-    "### (TODO) Writing inference code\n",
+    "### (TODO--DONE) Writing inference code\n",
     "\n",
     "Before writing our custom inference code, we will begin by taking a look at the code which has been provided."
    ]
@@ -1699,7 +1725,9 @@
    "source": [
     "As mentioned earlier, the `model_fn` method is the same as the one provided in the training code and the `input_fn` and `output_fn` methods are very simple and your task will be to complete the `predict_fn` method. Make sure that you save the completed file as `predict.py` in the `serve` directory.\n",
     "\n",
-    "**TODO**: Complete the `predict_fn()` method in the `serve/predict.py` file."
+    "**TODO--DONE**: Complete the `predict_fn()` method in the `serve/predict.py` file.\n",
+    "\n",
+    "## Please see lines 72, 87-89"
    ]
   },
   {
@@ -1885,7 +1913,7 @@
    "source": [
     "## Step 7 (again): Use the model for the web app\n",
     "\n",
-    "> **TODO:** This entire section and the next contain tasks for you to complete, mostly using the AWS console.\n",
+    "> **TODO--DONE:** This entire section and the next contain tasks for you to complete, mostly using the AWS console.\n",
     "\n",
     "So far we have been accessing our model endpoint by constructing a predictor object which uses the endpoint ...\n",
     "\n",
@@ -2043,7 +2071,9 @@
     "\n",
     "> **Important Note** In order for the web app to communicate with the SageMaker endpoint, the endpoint has to actually be deployed and running. This means that you are paying for it. Make sure that the endpoint is running when you want to use the web app but that you shut it down when you don't need it, otherwise you will end up with a surprisingly large AWS bill.\n",
     "\n",
-    "**TODO:** Make sure that you include the edited `index.html` file in your project submission."
+    "**TODO--DONE:** Make sure that you include the edited `index.html` file in your project submission.\n",
+    "\n",
+    "## Please see line 40"
    ]
   },
   {
@@ -2076,7 +2106,7 @@
     "\n",
     "**Question**: Give an example of a review that you entered into your web app. What was the predicted sentiment of your example review?\n",
     "\n",
-    "**Answer:** I predict this will be positive :)\n",
+    "**Answer:** I predict this will be positive :)  An outcome of 1.\n",
     "\n",
     "example:\n",
     "\n",
@@ -2100,20 +2130,13 @@
    "source": [
     "predictor.delete_endpoint()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_amazonei_pytorch_latest_p36",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda_amazonei_pytorch_latest_p36"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2125,7 +2148,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
