--- a/Project/[v1]markc_SageMaker_Project.ipynb
+++ b/Project/[v1]markc_SageMaker_Project.ipynb
@@ -488,7 +488,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "**Answer:** The method performs a number of other operations:\n",
+    "\n",
+    "* It removes *stop words*, commonly used words that have little bearing on the sentence's meaning (e.g., conjunctions and prepositions).\n",
+    "* It stems words, using the Porter stemmer, which is conservative (compared to the more aggressive Snowball stemmer).\n",
+    "* It converts all words to lowercase, and punctuation characters into spaces.\n",
+    "* It splits a sentence into words, based on word spaces."
    ]
   },
   {
@@ -1501,9 +1506,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**\n",
-    "\n",
-    "I think XGBoost is faster and simpler than a LSTM Recurring Neural Network. However, the LSTM model will have more sophistication that should, at least theoretically, deliver a higher degree of model performance (in this case, accuracy).\n",
+    "**Answer:** I think XGBoost is faster and simpler than a LSTM Recurring Neural Network. However, the LSTM model will have more sophistication that should, at least theoretically, deliver a higher degree of model performance (in this case, accuracy).\n",
     "\n",
     "Why the LSTM shows 50% accuracy is not completely clear. Though I did hope for higher, I did choose to move on to focus on MLND content. I did attempt a reduction in `hidden_dim` based on a [Udacity mentor suggestion](https://knowledge.udacity.com/questions/546544) to target overfitting.\n",
     "\n",
